--- a/2022/2022AoCDay5.ipynb
+++ b/2022/2022AoCDay5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,10 +20,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x106aa1040>"
+       "<IPython.lib.display.IFrame at 0x1076f5fd0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,50 +63,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_and_make_sets(val):\n",
-    "    a,b = val.split(',')\n",
-    "    set1 = make_consecutive_set(a)\n",
-    "    set2 = make_consecutive_set(b)\n",
-    "    return set1, set2\n",
+    "def init_stacks(setup):\n",
+    "    s0 = []\n",
+    "    s1 = []\n",
+    "    s2 = []\n",
+    "    s3 = []\n",
+    "    s4 = []\n",
+    "    s5 = []\n",
+    "    s6 = []\n",
+    "    s7 = []\n",
+    "    s8 = []\n",
+    "    s9 = []\n",
+    "    stacks = [s0,s1,s2,s3,s4,s5,s6,s7,s8,s9]\n",
+    "    for jj in range(-2,-10,-1):\n",
+    "        for ii,val in enumerate(range(1,35,4)):\n",
+    "            crate = setup[jj][val]\n",
+    "            if crate != ' ':\n",
+    "                stacks[ii+1].append(crate)\n",
+    "    return stacks\n",
     "\n",
-    "def make_consecutive_set(val):\n",
-    "    start, end = val.split('-')\n",
-    "    return set(range(int(start), int(end)+1))\n",
+    "            \n",
+    "def parse_instructions(line):\n",
+    "    out = line.split(' ')\n",
+    "    return int(out[1]), int(out[3]), int(out[5])\n",
     "\n",
-    "def is_subset(val):\n",
-    "    s1, s2 = parse_and_make_sets(val)\n",
-    "    return s1.issubset(s2) or s2.issubset(s1)\n",
+    "def move_crates(stacks, count, pop_stack, push_stack):\n",
+    "    for ii in range(count):\n",
+    "        crate = stacks[pop_stack].pop()\n",
+    "        stacks[push_stack].append(crate)\n",
+    "    return stacks\n",
     "\n",
-    "def is_overlap(val):\n",
-    "    s1, s2 = parse_and_make_sets(val)\n",
-    "    return len(s1.intersection(s2)) > 0\n",
-    "    "
+    "def move_crates_9001(stacks, count, pop_stack, push_stack):\n",
+    "    crate = []\n",
+    "    for ii in range(count):\n",
+    "        crate.append(stacks[pop_stack].pop())\n",
+    "    for ii in range(count):\n",
+    "        stacks[push_stack].append(crate.pop())\n",
+    "    return stacks\n",
+    "\n",
+    "def get_answer(stacks):\n",
+    "    return ''.join([stack[-1] for stack in stacks[1:]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import groupby\n",
+    "data = get_data(5)\n",
+    "records = [list(y) for x, y in groupby(data, lambda z: z == '') if not x]\n",
+    "setup = records[0]\n",
+    "instructions = records[1]\n",
+    "\n",
+    "\n",
+    "stacks = init_stacks(setup)\n",
+    "for instruction in instructions:\n",
+    "    count, pop_stack, push_stack = parse_instructions(instruction)\n",
+    "    stacks = move_crates(stacks, count, pop_stack, push_stack)\n",
+    "part1 = get_answer(stacks)\n",
+    "\n",
+    "stacks = init_stacks(setup)\n",
+    "for instruction in instructions:\n",
+    "    count, pop_stack, push_stack = parse_instructions(instruction)\n",
+    "    stacks = move_crates_9001(stacks, count, pop_stack, push_stack)\n",
+    "part2 = get_answer(stacks)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "466\n",
-      "865\n"
+      "GRTSWNJHH QLFQDBBHM\n"
      ]
     }
    ],
    "source": [
-    "data = get_data(4)\n",
-    "\n",
-    "\n",
-    "print(sum([is_subset(val) for val in data]))  # part 1\n",
-    "print(sum([is_overlap(val) for val in data])) # part 2"
+    "print(part1, part2)"
    ]
   },
   {
