--- a/2022/2022AoCDay6.ipynb
+++ b/2022/2022AoCDay6.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,54 +60,32 @@
     "    data = gather_input_data(url, sessionId)\n",
     "    return data\n",
     "\n",
-    "def find_marker(marker_length):\n",
+    "def find_marker(marker_length, data):\n",
     "    ii = marker_length\n",
     "    word = data[ii-marker_length:ii]\n",
     "    while len(set(word)) != marker_length:\n",
     "        ii = ii +1\n",
-    "        word = data[ii-14:ii]"
+    "        word = data[ii-marker_length:ii]\n",
+    "    return ii"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = get_data(6)\n",
-    "data = data[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = ['zcfzfwzzqfrljwzlrfnpqdbhtmscgvjw']\n",
-    "data = data[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2773\n"
+      "1965 2773\n"
      ]
     }
    ],
    "source": [
-    "ii = 14\n",
-    "word = data[ii-14:ii]\n",
-    "while len(set(word)) != 14:\n",
-    "    ii = ii +1\n",
-    "    word = data[ii-14:ii]\n",
-    "print(ii)"
+    "data = get_data(6)\n",
+    "data = data[0]\n",
+    "print(find_marker(4, data), find_marker(14, data))"
    ]
   },
   {
@@ -134,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
