--- a/2022/2022AoCDay10.ipynb
+++ b/2022/2022AoCDay10.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,12 +76,22 @@
     "    with open(filename) as f:\n",
     "        lines = f.readlines()\n",
     "    output = [str.rstrip(line) for line in lines]    \n",
-    "    return output"
+    "    return output\n",
+    "\n",
+    "def fill_cycle(cycle, register, instruction):\n",
+    "    if instruction == 'noop':\n",
+    "        cycle.append(register)\n",
+    "    else:\n",
+    "        val = int(instruction.split()[1])\n",
+    "        cycle.append(register)\n",
+    "        cycle.append(register)\n",
+    "        register += val \n",
+    "    return cycle, register"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +115,12 @@
      "output_type": "stream",
      "text": [
       "13740\n",
-      "####.#..#.###..###..####.####..##..#....\n",
-      "...#.#..#.#..#.#..#.#....#....#..#.#....\n",
-      "..#..#..#.#..#.#..#.###..###..#....#....\n",
-      ".#...#..#.###..###..#....#....#....#....\n",
-      "#....#..#.#....#.#..#....#....#..#.#....\n",
-      "####..##..#....#..#.#....####..##..####.\n"
+      "#### #  # ###  ###  #### ####  ##  #    \n",
+      "   # #  # #  # #  # #    #    #  # #    \n",
+      "  #  #  # #  # #  # ###  ###  #    #    \n",
+      " #   #  # ###  ###  #    #    #    #    \n",
+      "#    #  # #    # #  #    #    #  # #    \n",
+      "####  ##  #    #  # #    ####  ##  #### \n"
      ]
     }
    ],
@@ -119,20 +129,13 @@
     "cycle = []\n",
     "\n",
     "for instruction in data:\n",
-    "    if instruction == 'noop':\n",
-    "        cycle.append(register)\n",
-    "    else:\n",
-    "        val = int(instruction.split()[1])\n",
-    "        cycle.append(register)\n",
-    "        cycle.append(register)\n",
-    "        register += val\n",
-    "\n",
+    "    cycle, register = fill_cycle(cycle, register, instruction)\n",
     "part1 = (sum((ii+1) * reg  for ii, reg in list(enumerate(cycle))[19::40]))\n",
     "print(part1)\n",
     "\n",
     "for ii in range(0, len(cycle), 40):\n",
     "    for jj in range(40):\n",
-    "        print(end = \"#\" if abs(cycle[ii + jj] - jj) <= 1 else \".\")\n",
+    "        print(\"#\" if abs(cycle[ii + jj] - jj) <= 1 else \" \", end='')\n",
     "    print()"
    ]
   },
