--- a/2022/2022AoCDay10.ipynb
+++ b/2022/2022AoCDay10.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
     "\n",
     "for ii in range(0, len(cycle), 40):\n",
     "    for jj in range(40):\n",
-    "        print(\"#\" if abs(cycle[ii + jj] - jj) <= 1 else \" \", end='')\n",
+    "        print('#' if abs(cycle[ii + jj] - jj) <= 1 else ' ', end='')\n",
     "    print()"
    ]
   },
