--- a/2022/2022AoCDay10.ipynb
+++ b/2022/2022AoCDay10.ipynb
@@ -91,23 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "test = False\n",
-    "start = timer()\n",
     "data = get_data(day)\n",
     "if test:\n",
-    "    data = read_file('test.txt')\n",
-    "    \n",
-    "    \n",
-    "    "
+    "    data = read_file('test.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -115,16 +111,19 @@
      "output_type": "stream",
      "text": [
       "13740\n",
+      "Completed in 0.457210ms\n",
       "#### #  # ###  ###  #### ####  ##  #    \n",
       "   # #  # #  # #  # #    #    #  # #    \n",
       "  #  #  # #  # #  # ###  ###  #    #    \n",
       " #   #  # ###  ###  #    #    #    #    \n",
       "#    #  # #    # #  #    #    #  # #    \n",
-      "####  ##  #    #  # #    ####  ##  #### \n"
+      "####  ##  #    #  # #    ####  ##  #### \n",
+      "Completed in 14.846059ms\n"
      ]
     }
    ],
    "source": [
+    "start = timer()\n",
     "register = 1\n",
     "cycle = []\n",
     "\n",
@@ -132,11 +131,14 @@
     "    cycle, register = fill_cycle(cycle, register, instruction)\n",
     "part1 = (sum((ii+1) * reg  for ii, reg in list(enumerate(cycle))[19::40]))\n",
     "print(part1)\n",
+    "print(\"Completed in %fms\" % ((timer() - start) * 1000))\n",
     "\n",
+    "start = timer()\n",
     "for ii in range(0, len(cycle), 40):\n",
     "    for jj in range(40):\n",
     "        print('#' if abs(cycle[ii + jj] - jj) <= 1 else ' ', end='')\n",
-    "    print()"
+    "    print() \n",
+    "print(\"Completed in %fms\" % ((timer() - start) * 1000))"
    ]
   },
   {
