--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -57,6 +57,7 @@
     "## seperated by delimitor ('')\n",
     "## into sublist (record)\n",
     "import itertools\n",
+    "records = [list(y) for x, y in itertools.groupby(data, lambda z: z == '') if not x]\n",
     "records = [' '.join(list(y)).split() for x, y in itertools.groupby(data, lambda z: z == '') if not x]\n",
     "\n",
     "\n",
