--- a/2022/2022AoCDay15.ipynb
+++ b/2022/2022AoCDay15.ipynb
@@ -169,10 +169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10649103160102\n"
+     ]
+    }
+   ],
    "source": [
+    "# we are looking for a blanks space in box \n",
+    "# for each row find highest interval\n",
+    "# if the blank space in on that row, then\n",
+    "# the lower value of that highest interval \n",
+    "# will be bigger than edge of the box (in this case 0)\n",
+    "\n",
     "max_ord = 4000000\n",
     "min_ord = 0\n",
     "done = False\n",
