--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -100,7 +100,10 @@
     "def flatten_list_of_list(regular_list):\n",
     "    return [item for sublist in regular_list for item in sublist]\n",
     "\n",
-    "\n",
+    "###\n",
+    "# find all the numbers in a string\n",
+    "import re\n",
+    "data = [re.findall('-?\\d+', val) for val in data] \n",
     "\n",
     "\n",
     "## split a list of list (data) \n",
