--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -104,7 +104,8 @@
     "# find all the numbers in a string\n",
     "import re\n",
     "data = [re.findall('-?\\d+', val) for val in data] \n",
-    "\n",
+    "find all positive numbers in string and make them integers\n",
+    "list(map(int, re.findall('\\d+', data[0])))\n",
     "\n",
     "## split a list of list (data) \n",
     "## seperated by delimitor ('')\n",
