--- a/2022/2022AoCDay20.ipynb
+++ b/2022/2022AoCDay20.ipynb
@@ -82,172 +82,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sys\n",
+    "import math\n",
+    "from copy import deepcopy\n",
+    "from collections import defaultdict, deque\n",
     "\n",
     "data = get_data(day)\n",
-    "data = list(map(int, data))\n",
-    "\n",
-    "data = [1,\n",
-    "2,\n",
-    "-3,\n",
-    "3,\n",
-    "-2,\n",
-    "0,\n",
-    "4]\n",
     "data = (list(enumerate(data)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, 1), (1, 2), (2, -3), (3, 3), (4, -2), (5, 0), (6, 4)]\n"
+     "ename": "TypeError",
+     "evalue": "not all arguments converted during string formatting",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [94]\u001b[0m, in \u001b[0;36m<cell line: 23>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (X[(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1000\u001b[39m)\u001b[38;5;241m%\u001b[39m\u001b[38;5;28mlen\u001b[39m(X)][\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m X[(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m2000\u001b[39m)\u001b[38;5;241m%\u001b[39m\u001b[38;5;28mlen\u001b[39m(X)][\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m X[(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m3000\u001b[39m)\u001b[38;5;241m%\u001b[39m\u001b[38;5;28mlen\u001b[39m(X)][\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m---> 23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Input \u001b[0;32mIn [94]\u001b[0m, in \u001b[0;36msolve\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m val \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mpopleft()\n\u001b[1;32m     12\u001b[0m to_pop \u001b[38;5;241m=\u001b[39m val[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m---> 13\u001b[0m to_pop \u001b[38;5;241m%\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(X)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;241m0\u001b[39m\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39mto_pop \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(X)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(to_pop):\n",
+      "\u001b[0;31mTypeError\u001b[0m: not all arguments converted during string formatting"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "\n",
-    "print(data)\n",
-    "get_index(6, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.insert(3,(43,43))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[5][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for ii in range(len(data)):\n",
-    "    \n",
-    "    idx = get_index(ii, data)\n",
-    "    new_idx = idx + data[idx][0]\n",
-    "    \n",
-    "    new_idx = idx+move\n",
-    "    print(new_idx)\n",
-    "    break\n",
-    "    print(idx, data[idx])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def forward(ii, data):\n",
-    "    temp = data[ii+1]\n",
-    "    data[ii+1] = data[ii]\n",
-    "    data[ii] = temp\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  0],\n",
-       "       [ 2,  1],\n",
-       "       [-3,  2],\n",
-       "       [ 3,  3],\n",
-       "       [-2,  4],\n",
-       "       [ 0,  5],\n",
-       "       [ 4,  6]])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(paired)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4426\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "import math\n",
-    "from copy import deepcopy\n",
-    "from collections import defaultdict, deque\n",
-    "infile =  '20.in'\n",
-    "data = open(infile).read().strip()\n",
-    "lines = [x for x in data.split('\\n')]\n",
     "\n",
-    "def solve(part):\n",
-    "    X = [int(x) for x in lines]\n",
-    "    X = deque(list(enumerate(X)))\n",
+    "def solve():\n",
+    "\n",
+    "    X = deque(data)\n",
     "    for t in range(1):\n",
     "        for i in range(len(X)):\n",
     "            for j in range(len(X)):\n",
@@ -267,7 +140,7 @@
     "        if X[j][1] == 0:\n",
     "            break\n",
     "    return (X[(j+1000)%len(X)][1] + X[(j+2000)%len(X)][1] + X[(j+3000)%len(X)][1])\n",
-    "print(solve(1))\n"
+    "print(solve())\n"
    ]
   },
   {
