--- a/2022/2022AoCDay20.ipynb
+++ b/2022/2022AoCDay20.ipynb
@@ -2,34 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"1000\"\n",
-       "            height=\"600\"\n",
-       "            src=\"https://adventofcode.com/2022/day/20\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11369ba60>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 20\n",
     "from IPython.display import IFrame\n",
@@ -39,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,22 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "not all arguments converted during string formatting",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [94]\u001b[0m, in \u001b[0;36m<cell line: 23>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (X[(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1000\u001b[39m)\u001b[38;5;241m%\u001b[39m\u001b[38;5;28mlen\u001b[39m(X)][\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m X[(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m2000\u001b[39m)\u001b[38;5;241m%\u001b[39m\u001b[38;5;28mlen\u001b[39m(X)][\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m X[(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m3000\u001b[39m)\u001b[38;5;241m%\u001b[39m\u001b[38;5;28mlen\u001b[39m(X)][\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m---> 23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Input \u001b[0;32mIn [94]\u001b[0m, in \u001b[0;36msolve\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m val \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mpopleft()\n\u001b[1;32m     12\u001b[0m to_pop \u001b[38;5;241m=\u001b[39m val[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m---> 13\u001b[0m to_pop \u001b[38;5;241m%\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(X)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;241m0\u001b[39m\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39mto_pop \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(X)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(to_pop):\n",
-      "\u001b[0;31mTypeError\u001b[0m: not all arguments converted during string formatting"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -140,7 +104,7 @@
     "        if X[j][1] == 0:\n",
     "            break\n",
     "    return (X[(j+1000)%len(X)][1] + X[(j+2000)%len(X)][1] + X[(j+3000)%len(X)][1])\n",
-    "print(solve())\n"
+    "solve()\n"
    ]
   },
   {
