--- a/2022/2022AoCDay21.ipynb
+++ b/2022/2022AoCDay21.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "331319379445180"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,90 +156,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1911688169619302725675 50000000000000000000\n",
-      "-955844013775146749995 25000000000000000000\n",
-      "-477921935853068821035 12500000000000000000\n",
-      "-238960896892029915435 6250000000000000000\n",
-      "-119480377411510462635 3125000000000000000\n",
-      "-59740117671250758315 1562500000000000000\n",
-      "-29869987801120865675 781250000000000000\n",
-      "-14934922866055937755 390625000000000000\n",
-      "-7467390398523466435 195312500000000000\n",
-      "-3733624164757231235 97656250000000000\n",
-      "-1866741047874115705 48828125000000000\n",
-      "-933299489432557710 24414062500000000\n",
-      "-466578710211778310 12207031250000000\n",
-      "-233218320601388725 6103515625000000\n",
-      "-116538125796193875 3051757812500000\n",
-      "-58198028393596565 1525878906250000\n",
-      "-29027979692297795 762939453125000\n",
-      "-14442955341648525 381469726562500\n",
-      "-7150443166323775 190734863281250\n",
-      "-3504187078661400 95367431640625\n",
-      "-1681059034830270 47683715820312\n",
-      "-769495012914590 23841857910156\n",
-      "-313713001956865 11920928955078\n",
-      "-85821996478060 5960464477539\n",
-      "28123506261285 2980232238769\n",
-      "-28849245108330 4470348358154\n",
-      "-362869423465 3725290298461\n",
-      "13880318418910 3352761268615\n",
-      "6758724497665 3539025783538\n",
-      "3197927537100 3632158040999\n",
-      "1417529056875 3678724169730\n",
-      "527329816705 3702007234095\n",
-      "82230196620 3713648766278\n",
-      "-140319613480 3719469532369\n",
-      "-29044708430 3716559149323\n",
-      "26592744095 3715103957800\n",
-      "-1225982110 3715831553561\n",
-      "12683381050 3715467755680\n",
-      "5728699470 3715649654620\n",
-      "2251358680 3715740604090\n",
-      "512688285 3715786078825\n",
-      "-356646855 3715808816193\n",
-      "78020715 3715797447509\n",
-      "-139313070 3715803131851\n",
-      "-30646120 3715800289680\n",
-      "23687355 3715798868594\n",
-      "-3479440 3715799579137\n",
-      "10103900 3715799223865\n",
-      "3312230 3715799401501\n",
-      "-83605 3715799490319\n",
-      "1614255 3715799445910\n",
-      "765440 3715799468114\n",
-      "340860 3715799479216\n",
-      "128685 3715799484767\n",
-      "22540 3715799487543\n",
-      "-30475 3715799488931\n",
-      "-4025 3715799488237\n",
-      "9315 3715799487890\n",
-      "2645 3715799488063\n",
-      "-690 3715799488150\n",
-      "1035 3715799488106\n",
-      "230 3715799488128\n",
-      "-230 3715799488139\n",
-      "0 3715799488133\n",
-      "3715799488133\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [185]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m min_val \u001b[38;5;241m<\u001b[39m max_val:\n\u001b[1;32m      6\u001b[0m     mid \u001b[38;5;241m=\u001b[39m (max_val\u001b[38;5;241m+\u001b[39mmin_val)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[0;32m----> 7\u001b[0m     score \u001b[38;5;241m=\u001b[39m \u001b[43mnewton\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m score \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     10\u001b[0m         lo \u001b[38;5;241m=\u001b[39m mid\n",
+      "Input \u001b[0;32mIn [184]\u001b[0m, in \u001b[0;36mnewton\u001b[0;34m(mid)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnewton\u001b[39m(mid):\n\u001b[1;32m      4\u001b[0m     data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhumn\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m mid\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mroot\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m op\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     l \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m     r \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28meval\u001b[39m(\u001b[38;5;28mstr\u001b[39m(l)\u001b[38;5;241m+\u001b[39mop[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(r)))\n",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     l \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m----> 7\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28meval\u001b[39m(\u001b[38;5;28mstr\u001b[39m(l)\u001b[38;5;241m+\u001b[39mop[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(r)))\n",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m op\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     l \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m     r \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28meval\u001b[39m(\u001b[38;5;28mstr\u001b[39m(l)\u001b[38;5;241m+\u001b[39mop[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(r)))\n",
+      "    \u001b[0;31m[... skipping similar frames: compute at line 6 (3 times)]\u001b[0m\n",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     l \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m----> 7\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28meval\u001b[39m(\u001b[38;5;28mstr\u001b[39m(l)\u001b[38;5;241m+\u001b[39mop[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(r)))\n",
+      "    \u001b[0;31m[... skipping similar frames: compute at line 7 (8 times), compute at line 6 (3 times)]\u001b[0m\n",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m op\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     l \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m     r \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28meval\u001b[39m(\u001b[38;5;28mstr\u001b[39m(l)\u001b[38;5;241m+\u001b[39mop[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(r)))\n",
+      "    \u001b[0;31m[... skipping similar frames: compute at line 7 (1 times)]\u001b[0m\n",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     l \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m----> 7\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28meval\u001b[39m(\u001b[38;5;28mstr\u001b[39m(l)\u001b[38;5;241m+\u001b[39mop[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(r)))\n",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m      6\u001b[0m l \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      7\u001b[0m r \u001b[38;5;241m=\u001b[39m compute(op[\u001b[38;5;241m2\u001b[39m])\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43meval\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mop\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mr\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m<string>:1\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "## part2\n",
     "# newtons method on sign flipping until they are equal\n",
-    "lo = 0\n",
-    "hi = int(1e20)\n",
-    "while lo < hi:\n",
-    "    mid = (lo+hi)//2\n",
+    "min_val = 0\n",
+    "max_val = int(1e20)\n",
+    "while min_val < max_val:\n",
+    "    mid = (max_val+min_val)//2\n",
     "    score = newton(mid)\n",
-    "    print(score, mid)\n",
+    "    \n",
     "    if score > 0:\n",
     "        lo = mid\n",
     "    elif score == 0:\n",
@@ -251,22 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data['humn'] = 3715799488132\n",
+    "data['humn'] = 3715799488133\n",
     "data['root'] = (data['root'][0],'==',data['root'][2])\n",
     "compute('root')"
    ]
