--- a/2022/2022AoCDay25.ipynb
+++ b/2022/2022AoCDay25.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,52 +83,25 @@
     "    return out\n",
     "\n",
     "def base10_to_snafu(val):\n",
+    "    decode = {0:'0',1:'1',2:'2',3:'-',4:'='}\n",
     "    out = \"\"\n",
     "    while val:\n",
     "        rem = val % 5\n",
     "        val //= 5\n",
-    "        print(out)\n",
-    "        decode = {0:'0',1:'1',2:'2',3:'-',4:'='}\n",
-    "\n",
-    "        if rem <= 2:\n",
-    "            out = str(rem) + out\n",
-    "        else:\n",
-    "            out = \"   =-\"[rem] + out\n",
-    "            val += 1\n",
-    "\n",
+    "        out = decode[rem] + out\n",
     "    return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "2\n",
-      "=2\n",
-      "==2\n",
-      "0==2\n",
-      "-0==2\n",
-      "0-0==2\n",
-      "-0-0==2\n",
-      "1-0-0==2\n",
-      "-1-0-0==2\n",
-      "1-1-0-0==2\n",
-      "01-1-0-0==2\n",
-      "=01-1-0-0==2\n",
-      "-=01-1-0-0==2\n",
-      "0-=01-1-0-0==2\n",
-      "10-=01-1-0-0==2\n",
-      "110-=01-1-0-0==2\n",
-      "-110-=01-1-0-0==2\n",
-      "1-110-=01-1-0-0==2\n",
-      "-1-110-=01-1-0-0==2\n",
-      "2-1-110-=01-1-0-0==2\n"
+      "1=0=10=--00=0-=-=2-2\n"
      ]
     }
    ],
@@ -136,13 +109,6 @@
     "part1 = base10_to_snafu(sum([snafu_to_base10(val) for val in data]))\n",
     "print(part1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
