--- a/2023/Day_2_2023_AoC.ipynb
+++ b/2023/Day_2_2023_AoC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "id": "ad3a9f8d",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,12 @@
     "\n",
     "import re\n",
     "def find_int_in_string(val):\n",
-    "    return list(map(int, re.findall('\\d+', val)))[0]"
+    "    return list(map(int, re.findall('\\\\d+', val)))[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "id": "ab64c1d7",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "id": "a524deb9",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "id": "733aefe2",
    "metadata": {},
    "outputs": [
@@ -137,26 +137,26 @@
     "    for outcomes in trial.split(';'):\n",
     "        for tiles in outcomes.split(','):\n",
     "            if 'blue' in tiles:\n",
-    "                number_tiles = find_int_in_string(tiles)[0]\n",
+    "                number_tiles = find_int_in_string(tiles)\n",
     "                if  number_tiles > blue_max:\n",
     "                    possible = False\n",
     "                if number_tiles > blue_hi:\n",
     "                    blue_hi = number_tiles\n",
     "            if 'green' in tiles:\n",
-    "                number_tiles = find_int_in_string(tiles)[0]\n",
-    "                if find_int_in_string(tiles)[0] > green_max:\n",
+    "                number_tiles = find_int_in_string(tiles)\n",
+    "                if number_tiles > green_max:\n",
     "                    possible = False\n",
     "                if number_tiles > green_hi:\n",
     "                    green_hi = number_tiles\n",
     "            if 'red' in tiles:\n",
-    "                number_tiles = find_int_in_string(tiles)[0]\n",
-    "                if find_int_in_string(tiles)[0] > red_max:\n",
+    "                number_tiles = find_int_in_string(tiles)\n",
+    "                if number_tiles > red_max:\n",
     "                    possible = False\n",
     "                if number_tiles > red_hi:\n",
     "                    red_hi = number_tiles\n",
     "    power_games.append(blue_hi * green_hi * red_hi)\n",
     "    if possible:\n",
-    "        possible_games.append(find_int_in_string(game)[0])\n",
+    "        possible_games.append(find_int_in_string(game))\n",
     "print(sum(possible_games))\n",
     "print(sum(power_games))"
    ]
@@ -194,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
