--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -54,6 +54,11 @@
     "list('string')\n",
     "data = [*'string']\n",
     "\n",
+    "# find if a substring is in a larger string\n",
+    "'one' in line\n",
+    "\n",
+    "# string starts with \n",
+    "line.startswith()\n",
     "\n",
     "## remove and element in list (data) by index (0)\n",
     "data.pop(0)\n",
@@ -71,9 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:29: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:29: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "/var/folders/yq/pj60yl0n5pbg9vcqvqwwl0380000gn/T/ipykernel_7436/1697840617.py:29: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  data = [re.findall('-?\\d+', val) for val in data]\n",
+      "/var/folders/yq/pj60yl0n5pbg9vcqvqwwl0380000gn/T/ipykernel_7436/1697840617.py:29: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  data = [re.findall('-?\\d+', val) for val in data]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_of_objects' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(a)\u001b[38;5;241m.\u001b[39mintersection(b))\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m## convert a list of objects into a list of sets\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m list_of_sets \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mset\u001b[39m(val) \u001b[38;5;28;01mfor\u001b[39;00m val \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlist_of_objects\u001b[49m]\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m## find the intersection between all set in a list\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mset\u001b[39m\u001b[38;5;241m.\u001b[39mintersection(\u001b[38;5;241m*\u001b[39mlist_of_sets)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'list_of_objects' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def read_file(filename):\n",
     "    # read file\n",
@@ -104,8 +133,12 @@
     "# find all the numbers in a string\n",
     "import re\n",
     "data = [re.findall('-?\\d+', val) for val in data] \n",
-    "find all positive numbers in string and make them integers\n",
-    "list(map(int, re.findall('\\d+', data[0])))\n",
+    "# find all positive numbers in string and make them integers\n",
+    "list(map(int, re.findall('\\\\d+', data[0])))\n",
+    "# find all occurences (not just first) of regex in string\n",
+    "re.finditer('\\\\*', line)\n",
+    "\n",
+    "# test if a string is all the same characters\n",
     "\n",
     "## split a list of list (data) \n",
     "## seperated by delimitor ('')\n",
@@ -311,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
