--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -76,33 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:29: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:29: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "/var/folders/yq/pj60yl0n5pbg9vcqvqwwl0380000gn/T/ipykernel_7436/1697840617.py:29: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  data = [re.findall('-?\\d+', val) for val in data]\n",
-      "/var/folders/yq/pj60yl0n5pbg9vcqvqwwl0380000gn/T/ipykernel_7436/1697840617.py:29: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  data = [re.findall('-?\\d+', val) for val in data]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'list_of_objects' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(a)\u001b[38;5;241m.\u001b[39mintersection(b))\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m## convert a list of objects into a list of sets\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m list_of_sets \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mset\u001b[39m(val) \u001b[38;5;28;01mfor\u001b[39;00m val \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlist_of_objects\u001b[49m]\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m## find the intersection between all set in a list\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mset\u001b[39m\u001b[38;5;241m.\u001b[39mintersection(\u001b[38;5;241m*\u001b[39mlist_of_sets)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'list_of_objects' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def read_file(filename):\n",
     "    # read file\n",
@@ -139,6 +115,7 @@
     "re.finditer('\\\\*', line)\n",
     "\n",
     "# test if a string is all the same characters\n",
+    "clique == len(clique) * '.'\n",
     "\n",
     "## split a list of list (data) \n",
     "## seperated by delimitor ('')\n",
