--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -142,6 +142,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
+    "X = defaultdict(list)\n",
+    "# default dict lets you make a dictionary without intiailzing.\n",
+    "# dynamic allocated dictionary. \n",
+    "# if you access a default dict with a new key it creates a default type\n",
+    "# in this case X[new_key)] will be a list you can store to\n",
+    "\n",
     "class Point(object):\n",
     "    '''Creates a point on a coordinate plane from a list [x,y].'''\n",
     "\n",
