--- a/2023/Day_6_AoC_2023.ipynb
+++ b/2023/Day_6_AoC_2023.ipynb
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 3,
    "id": "02c11df4-3fae-4f17-a97b-48228df088d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isWin(t, time=time, distance=distance):\n",
+    "def isWin(t, time, distance):\n",
     "    return ((time - t) * t) >= distance\n",
     "\n",
     "def newton(start, end, time, distance, forward=True):\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 4,
    "id": "ff824241-14e5-4448-bbf2-6fe2b6841ce1",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 5,
    "id": "16add80c-2484-4478-9f02-72dffca2871c",
    "metadata": {},
    "outputs": [
@@ -105,6 +105,14 @@
     "distance  = int(''.join(re.findall('\\\\d+', data[1])))\n",
     "print(find_wins(time, distance))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cbe3fff-cf81-49c5-9d17-898decabd3be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
