--- a/2023/Day_6_AoC_2023.ipynb
+++ b/2023/Day_6_AoC_2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e5cfe8d0-d8a1-4e14-bdf1-1d9be74fd24d",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "id": "02c11df4-3fae-4f17-a97b-48228df088d7",
    "metadata": {},
    "outputs": [],
@@ -60,13 +60,17 @@
     "    end = newton(time//2, distance, time, distance, False)\n",
     "    return (count_wins(start[1], end[0]))\n",
     "    \n",
-    "data = [find_int_in_string(line) for line in get_data(6)]\n",
-    "data = list(zip(data[0], data[1]))"
+    "def quad(b,c):\n",
+    "    disc = ((b**2) - (4*c)) ** .5\n",
+    "    r1 = (int((-1*b + disc) / -2))\n",
+    "    r2 = (int((-1*b - disc) / -2) + 1) \n",
+    "    return r2-r1-1\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "id": "ff824241-14e5-4448-bbf2-6fe2b6841ce1",
    "metadata": {},
    "outputs": [
@@ -80,6 +84,8 @@
    ],
    "source": [
     "part1 = 1\n",
+    "data = [find_int_in_string(line) for line in get_data(6)]\n",
+    "data = list(zip(data[0], data[1]))\n",
     "for (time, distance) in data:\n",
     "    part1 *= find_wins(time, distance)\n",
     "print(part1)"
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "id": "16add80c-2484-4478-9f02-72dffca2871c",
    "metadata": {},
    "outputs": [
@@ -108,8 +114,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "2cbe3fff-cf81-49c5-9d17-898decabd3be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "303600\n"
+     ]
+    }
+   ],
+   "source": [
+    "part1 = 1\n",
+    "data = [find_int_in_string(line) for line in get_data(6)]\n",
+    "data = list(zip(data[0], data[1]))\n",
+    "for (time, distance) in data:\n",
+    "    part1 *= quad(time, distance)\n",
+    "print(part1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "64992383-a5e5-4e9a-9d7d-bd0050356131",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23654842\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = get_data(6)\n",
+    "time  = int(''.join(re.findall('\\\\d+', data[0])))\n",
+    "distance  = int(''.join(re.findall('\\\\d+', data[1])))\n",
+    "print(quad(time, distance))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef5b7e73-410a-4e3e-971b-1654a47418a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c40e83e2-808b-4a32-a3f8-376571c11885",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9fa9e4b-b858-44c2-b0e1-da08b186c8c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16dbcb34-d435-4a0b-a02c-83afa2f1db5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274763ef-71ab-45f9-a3bf-323ecb89ef17",
    "metadata": {},
    "outputs": [],
    "source": []
