--- a/2023/Day_7_AoC_2023.ipynb
+++ b/2023/Day_7_AoC_2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2ac1616-158c-4e8b-a79a-ba9afb0b1439",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "def find_int_in_string(val):\n",
     "    return list(map(int, re.findall('\\\\d+', val)))\n",
     "\n",
-    "from collections import Counter\n",
+    "from collections import Counter, defaultdict\n",
     "def hand_to_rank(hand):\n",
     "    ranking = {'5':7, '14':6, '23':5, '113':4, '122':3, '1112':2, '11111':1}\n",
     "    d = Counter(hand)\n",
@@ -67,20 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2a53e6e4-9d91-4a2e-a66d-763ac5e0d00b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'defaultdict' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m part2 \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m]:\n\u001b[0;32m----> 2\u001b[0m     sorted_rank \u001b[38;5;241m=\u001b[39m \u001b[43mread_rank_sort_hands\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpart2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     out \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m ii, val \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(sorted_rank):\n",
-      "Cell \u001b[0;32mIn[2], line 40\u001b[0m, in \u001b[0;36mread_rank_sort_hands\u001b[0;34m(part2)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mread_rank_sort_hands\u001b[39m(part2):\n\u001b[0;32m---> 40\u001b[0m     rank \u001b[38;5;241m=\u001b[39m \u001b[43mdefaultdict\u001b[49m(\u001b[38;5;28mlist\u001b[39m)\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m get_data(\u001b[38;5;241m7\u001b[39m):\n\u001b[1;32m     43\u001b[0m         hand, bid \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'defaultdict' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "252295678\n",
+      "250577259\n"
      ]
     }
    ],
