--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -113,6 +113,8 @@
     "list(map(int, re.findall('\\\\d+', data[0])))\n",
     "# find all occurences (not just first) of regex in string\n",
     "re.finditer('\\\\*', line)\n",
+    "## find all 3 letter word in line\n",
+    "re.findall(r\"\\w{3}\", line)\n",
     "\n",
     "# test if a string is all the same characters\n",
     "clique == len(clique) * '.'\n",
