--- a/2023/Day_8_AoC_2023.ipynb
+++ b/2023/Day_8_AoC_2023.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "0f622998-50b6-424b-b3d2-60f3288805ed",
    "metadata": {},
    "outputs": [],
@@ -46,8 +46,8 @@
     "\n",
     "node_map = defaultdict(tuple)\n",
     "for val in node_list[0]:\n",
-    "    k, l, r = val.replace(' = (',',').replace(')','').split(',')\n",
-    "    node_map[k] = (l,r.strip())\n",
+    "    k, l, r = re.findall('\\\\w{3}',val)\n",
+    "    node_map[k] = (l,r)\n",
     "instruction = instruction[0].replace('L','0').replace('R','1')\n",
     "\n",
     "\n"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "7424c938-b278-44db-889a-a6c9fd6a28cc",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17873\n"
+      "[17873]\n",
+      "17873\n",
+      "[17873, 19631, 17287, 12599, 21389, 20803]\n",
+      "15746133679061\n"
      ]
     }
    ],
@@ -83,18 +86,11 @@
     "            if cur.endswith('Z'):\n",
     "                path_lengths.append(s)\n",
     "                break\n",
+    "    print(path_lengths)\n",
     "    print(lcm(*path_lengths))\n",
     "solve_path(False)\n",
     "solve_path(True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d58f89a-4b26-490f-870a-7712abbb6b22",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
