--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -114,7 +114,7 @@
     "# find all occurences (not just first) of regex in string\n",
     "re.finditer('\\\\*', line)\n",
     "## find all 3 letter word in line\n",
-    "re.findall(r\"\\w{3}\", line)\n",
+    "re.findall(r\"\\\\w{3}\", line)\n",
     "\n",
     "# test if a string is all the same characters\n",
     "clique == len(clique) * '.'\n",
