--- a/2023/Day_9_AoC_2023.ipynb
+++ b/2023/Day_9_AoC_2023.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 163,
    "id": "20581ee5-131a-47ec-b00e-41967cd1fc9e",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,6 @@
     }
    ],
    "source": [
-    "history=get_data(9)\n",
     "\n",
     "from math import comb\n",
     "def Lagrange1(nums):\n",
@@ -103,7 +102,7 @@
     "    return res\n",
     "\n",
     "res1,res2=0,0\n",
-    "for line in history:\n",
+    "for line in get_data(9):\n",
     "    nums=list(map(int,line.strip().split()))\n",
     "    res1+=Lagrange1(nums)\n",
     "    res2+=Lagrange2(nums)\n",
