--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -93,6 +93,10 @@
     "def list_str_intersection(a,b):\n",
     "    return list(set(a).intersection(b))\n",
     "\n",
+    "def list_of_string_transpose(data):\n",
+    "    return [''.join(i) for i in zip(*data)]\n",
+    "\n",
+    "\n",
     "## convert a list of objects into a list of sets\n",
     "list_of_sets = [set(val) for val in list_of_objects]\n",
     "## find the intersection between all set in a list\n",
