--- a/2023/Day_14_AoC_2023.ipynb
+++ b/2023/Day_14_AoC_2023.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "daf09ce1-fa5f-4715-84a1-a076cd2afddf",
    "metadata": {},
    "outputs": [
@@ -88,18 +88,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "106997\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'calculate_load' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m     state \u001b[38;5;241m=\u001b[39m state \u001b[38;5;241m+\u001b[39m val \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      8\u001b[0m state \u001b[38;5;241m=\u001b[39m apply_n_times(apply_cycle_to_input, state, \u001b[38;5;241m1_000_000_000\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcalculate_load\u001b[49m(state\u001b[38;5;241m.\u001b[39msplitlines()))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'calculate_load' is not defined"
+      "106997\n",
+      "99641\n"
      ]
     }
    ],
@@ -112,7 +102,7 @@
     "for val in get_data(14):\n",
     "    state = state + val + '\\n'\n",
     "state = apply_n_times(apply_cycle_to_input, state, 1_000_000_000)\n",
-    "print(calculate_load(state.splitlines()))"
+    "print(score(state.splitlines()))"
    ]
   },
   {
