--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -134,7 +134,7 @@
     "## convert a list of strings into a list of int\n",
     "list(map(int, list_of_strings))\n",
     "\n",
-    "## convert a character to unicode \n",
+    "## convert a character to unicode / ascii\n",
     "ord(charaacter_variable)\n",
     "\n",
     "## parse a list (data) n items at a time (in this case 3)\n",
